Add health endpoint
